# mpv-mpris2

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  justfile  mpris.run
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
.github/workfows/: rust.yml
spec/: org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.Playlists.xml  org.mpris.MediaPlayer2.TrackList.xml  org.mpris.MediaPlayer2.xml
src/: common.rs  ffi.rs  future.rs  lib.rs  llb.rs  macros.rs  main.rs  mp.rs  mpris.rs  mpris2.rs  mpv.h  mpv.rs  plugin.rs  ptr.rs
src/mpris/: mod.rs  player.rs  root.rs
src/mpv/: ipc.rs  mod.rs  protocol.rs
src/plugin/: args.rs  mod.rs  mpris.rs  state.rs
