[package]
name = "mpv-mpris2"
version = "0.0.2"
edition = "2021"
license = "MIT-0"

[lib]
crate-type = ["cdylib"]
path = "src/plugin.rs"

[profile.release]
lto = true

[lints.clippy]
suspicious = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2"
scopeguard = "1"
serde_json = "1"
smol = "2"
static_assertions = "1.1.0"
url = "2"
zbus = "5"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
