[package]
name = "mpris"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
crabtime = "1"
futures-concurrency = "7"
kanal = "0.1"
infer = "0.19"
mpris-server = { version = "0.10", features = ["unstable"] }
oneshot = { version = "0.2", features = ["async", "std"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1", features = ["derive"] }
serde-constant = "0.1"
serde_json = "1"
serde_variant = "0.1"
slab = "0.4"
smol = "2"
sync_wrapper = { version = "1", features = ["futures"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zbus = { version = "5", default-features = false, features = ["async-io"] }
strum = { version = "0.28", features = ["derive"] }
serde_with = "3"
data-encoding = "2"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
