[package]
name = "mpv-mpris2"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Rust implementation of the MPRIS v2 DBus interface for the mpv media player."
repository = "https://github.com/eNV25/mpv-mpris2"
publish = false

[dependencies]
anyhow = "1"
crabtime = "1"
data-encoding = "2"
futures-concurrency = "7"
infer = "0.19"
kanal = "0.1"
libc = "0.2"
mpris-server = { version = "0.10", features = ["unstable"] }
oneshot = { version = "0.2", features = ["async", "std"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1", features = ["derive"] }
serde-constant = "0.1"
serde_json = "1"
serde_variant = "0.1"
serde_with = "3"
slab = "0.4"
smol = "2"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zbus = { version = "5", default-features = false, features = ["async-io"] }

[profile.dist]
inherits = "release"
lto = true
strip = true
